# Calibrator

./: CMakeLists.txt  README.md
cmake/: Common.cmake  DetectCXX11.cmake  DetectOpenCV.cmake
include/: Calibrator.cpp  Calibrator.h
lib/: instructions
mynteye_include/: camera.h  h_files  imudata.h  mynteye.h  plugin.h  utility.h
mynteye_lib/: mynteye_libraries
src/: mynteye_camera_calib.cpp  mynteye_camera_calib2.cpp
